--- a/layouts/shortcodes/youtube.html
+++ b/layouts/shortcodes/youtube.html
@@ -1,5 +1,5 @@
 <div style="height: 225px; margin-bottom: 10px; width: 400px">
   <iframe style="width: 100%; height: 100%;"
-    src="http://www.youtube.com/embed/{{ index .Params 0 }}" allowfullscreen frameborder="0">
+    src="https://www.youtube.com/embed/{{ index .Params 0 }}" allowfullscreen frameborder="0">
   </iframe>
 </div>
